# rustfetch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yaml
ascii/: nixos.txt
docs/: README.md  add_a_feature.md  architecture.md  guide_to_installation.md  roadmap.md
docs/images/: arch_0.2.avif  arch_0.3.0.avif  cli_argument_description.avif  fedora_0.3.0.avif  macos_0.2.avif  ubuntu_0.2.avif
scripts/: runtime.sh
src/: cache.rs  cli.rs  config.rs  lib.rs  main.rs
src/common/: display.rs  logo.rs  mod.rs  utils.rs
src/platform/: linux.rs  macos.rs  mod.rs
src/sysinfo/: shared.rs
tests/: cache_test.rs  utils_tests.rs
