[package]
name = "rustfetch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustfetch"
path = "src/main.rs"

[dependencies]
colored = "3.1.1"
dirs = "6.0.0"
nix = { version = "0.30.1", features = ["fs"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
toml = "0.9.11"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
