[package]
name = "rustfetch"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustfetch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
nix = { version = "0.30.1", features = ["fs"] }
pollster = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
toml = "0.9.11"
wgpu = "28.0.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
